@@ -70,3 +70,4 @@
 	- Fixed memory leaks.
 	- Check specifically for tm_gmtoff and set HAVE_TM_GMTOFF
 	- Fixed memory problem for colon but no port ("http://foo.com:/")
+	- Added support for weighted neighbors.
